test/sematest/invalid/assign_to_this.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    this = new Test();
  }
}
